--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^2.16.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@react-native/metro-config": "0.74.87",
     "@react-native/typescript-config": "0.74.87",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
